Major: Added Roles for Users + ConferenceController

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,19 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-    </dependencies>
+		<!-- Disabled Spring Security to interference with h2, haven't resolved it yet
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		-->
+
+	</dependencies>
 
 	<build>
 		<plugins>
