--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.web=DEBUG
+logging.level.tp.isilB.conference=DEBUG
+
