--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.web=DEBUG
 logging.level.tp.isilB.conference=DEBUG
 
+logging.level.org.springframework.security=DEBUG
